# ecg-estudos

./: .gitignore  README.md  pyproject.toml
ecg_ruido/#2/: atividade.ipynb
ecg_ruido/#3/: atividade.ipynb
ecg_ruido/#4/: atividade.ipynb  plots-ecgs-ruins.ipynb
